This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Possible leaks in ctypes
Type: resource usage Stage: resolved
Components: ctypes, Extension Modules Versions: Python 3.6, Python 3.5, Python 2.7
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: amaury.forgeotdarc, belopolsky, martin.panter, meador.inge, python-dev, serhiy.storchaka
Priority: normal Keywords: patch

Created on 2016-06-16 07:27 by serhiy.storchaka, last changed 2022-04-11 14:58 by admin. This issue is now closed.

Files
File name Uploaded Description Edit
ctypes_leaks.patch serhiy.storchaka, 2016-06-16 07:27 review
Messages (4)
msg268646 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2016-06-16 07:27
Proposed patch fixes memory leaks in ctypes in case of errors.
msg268660 - (view) Author: Martin Panter (martin.panter) * (Python committer) Date: 2016-06-16 11:46
Mostly looks good. I left a two comments.
msg268688 - (view) Author: Roundup Robot (python-dev) (Python triager) Date: 2016-06-16 19:10
New changeset e04c054beb53 by Serhiy Storchaka in branch '2.7':
Issue #27330: Fixed possible leaks in the ctypes module.
https://hg.python.org/cpython/rev/e04c054beb53

New changeset 41f99ee19804 by Serhiy Storchaka in branch '3.5':
Issue #27330: Fixed possible leaks in the ctypes module.
https://hg.python.org/cpython/rev/41f99ee19804

New changeset 27e7945c4ecd by Serhiy Storchaka in branch 'default':
Issue #27330: Fixed possible leaks in the ctypes module.
https://hg.python.org/cpython/rev/27e7945c4ecd
msg268714 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2016-06-17 08:36
Thank you for your review Martin! Committed with your fixes.
History
Date User Action Args
2022-04-11 14:58:32adminsetgithub: 71517
2016-06-17 08:36:06serhiy.storchakasetstatus: open -> closed
resolution: fixed
messages: + msg268714

stage: patch review -> resolved
2016-06-16 19:10:50python-devsetnosy: + python-dev
messages: + msg268688
2016-06-16 11:46:06martin.pantersetnosy: + martin.panter
messages: + msg268660
2016-06-16 07:27:17serhiy.storchakacreate